# Charts

./: CMakeLists.txt  Graphics_2sem-Info.plist  runFor_UnixMakefiles.sh  runFor_VisualStudio17_2022.bat  runFor_Xcode.sh
include/: IFunction.h  Parabola.h
source/: IFunction.cpp  Parabola.cpp  main.cpp
